--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -124,11 +124,11 @@ spring:
       client:
         provider:
           oidc:
-            issuer-uri: http://localhost:9080/auth/realms/jhipster
+            issuer-uri: https://dev-992900.okta.com/oauth2/default
         registration:
           oidc:
-            client-id: web_app
-            client-secret: web_app
+            client-id: 0oa1aykbfvUKOJN4S357
+            client-secret: gpuNPCPBQWl_JJLAMZh6fFlc1XyuBoCTtKtm2JYD
 
 server:
   servlet:
